<resources>
    <string name="app_name">Go Puppet Yourself!</string>
    <string name="facebook_app_id" translatable="false">125905341083258</string>
    <string name="player_banner_ad_id" translatable="false">ca-app-pub-4640479150069852/8407915527</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_designer">Puppet Designer</string>
    <string name="title_activity_player">Go Puppet Yourself Player</string>

    <!-- Misc string -->
    <string name="default_puppet_name">Unnamed</string>
    <string name="puppet_extension">.puppet</string>
    <string name="puppet_directory">puppets</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="toast_oom_scaling">Out of memory, scaling image down. </string>

    <!-- Main Menu Popup strings-->
    <string name="share_show_text">Share puppet show</string>
    <string name="share_message">Tell your friends</string>
    <string name="rate_us">Rate us</string>
    <string name="no_puppet_show_toast">You must record a show before it can be shared</string>
    <string name="uploading_msg">Uploading to Google Drive&#8230;</string>
    <string name="recording_finished">Saving recording&#8230;</string>

    <!-- FB Share Alert Dialog Strings -->
    <string name="share_alert_message">In order to share a puppet show to Facebook, Go Puppet Yourself will create a public folder in your Google Drive in which to save the
        necessary files.  This folder will be accessible to anyone on the web.  This folder will not be automatically removed if you uninstall the app.
        You may view and remove the folder at anytime through your <a href="https://drive.google.com/drive/my-drive">Google Drive account</a>.
    </string>
    <string name="do_not_show_again">Do not show this again</string>

    <!-- Puppet ActionMode strings -->
    <string name="action_edit_puppet">Edit</string>
    <string name="action_puppet_visible">Visible in scene</string>
    <string name="action_delete_remove">Return to library</string>
    <string name="action_scale">Scale</string>
    <string name="action_flip_horz">Flip</string>
    <string name="action_bring_to_front">Bring to front</string>
    <string name="action_rotate">Rotate</string>

    <!-- Puppet library strings -->
    <string name="puppet_library_title">Puppet Library</string>
    <string name="alert_dialog_title_delete">Delete puppet</string>
    <string name="alert_dialog_message_delete">Are you sure you want to permanently delete this puppet?</string>
    <string name="trash_click_message">Drag an item to the trash to delete it</string>

    <!-- Background library strings -->
    <string name="background_library_title">Background Library</string>

    <!-- Designer Activity Strings -->
    <string name="alert_dialog_title_overwrite">Wait a minute&#8230;</string>
    <string name="alert_dialog_message_overwrite">A puppet already exists with this name.  Do you want to overwrite it?</string>
    <string name="puppet_name_hint">Name this puppet</string>
    <string name="get_new_image_popup_title">Get new image</string>
    <string name="action_new_image">New image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Photo Gallery</string>
    <string name="blank_image">Blank Image</string>
    <string name="alert_dialog_title_unsaved">Wait a minute&#8230;</string>
    <string name="alert_dialog_message_unsaved">Do you want to save your changes?</string>
    <string name="toast_magic_erase">Touch to erase a region of similar colors</string>
    <string name="toast_cut_path">Outline the region to cut</string>
    <string name="toast_profile">Adjust the shadow to fit the puppet</string>
    <string name="toast_profile_right">Right facing</string>
    <string name="toast_profile_left">Left facing</string>

    <!-- Designer ActionMode Strings -->
    <string name="action_draw">Draw</string>
    <string name="action_edit_image">Image</string>
    <string name="action_edit_orientation">Orientation</string>
    <string name="action_save">Save</string>

    <string name="action_palette">Palette</string>
    <string name="action_brush_size">Brush size</string>

    <string name="action_rotate_right">Rotate right</string>
    <string name="action_rotate_left">Rotate left</string>
    <string name="action_erase">Erase</string>
    <string name="action_magic_erase">Erase region</string>
    <string name="action_cut_path">Smart cut</string>
    <string name="action_heal">Heal</string>

    <!-- AppLink HTML-->
    <string name="app_link_html" translatable="false">
        <![CDATA[
        <html>
        <head>
        <meta property=\"al:android:url\" content=\"gopuppetyourself://download_link\" />
        <meta property=\"al:android:package\" content=\"com.nakedape.gopuppetyourself\" />
        <meta property=\"al:android:app_name\" content=\"Go Puppet Yourself!\" />
        <meta property=\"al:web:should_fallback\" content=\"true\" />
        <meta property=\"og:type\" content=\"website\" />
        <meta property=\"og:url\" content=\"fb_link\" />
        <meta property=\"og:title\" content=\"user_title\" />
        <meta property=\"fb:app_id\" content=\"125905341083258\" />
        <meta property=\"og:image\" content=\"thumb_link\" />
        <meta property=\"og:image:width\" content=\"1200\" />
        <meta property=\"og:image:height\" content=\"630\" />
        </head>
        <body style=\"background-color:purple\">
	    <a href=\"https://play.google.com/store/apps/details?id=com.nakedape.gopuppetyourself\">Download Go Puppet Yourself</a> for Android to watch the show.<br><br>
        <img src=\"https://www.googledrive.com/host/0B1yEGoIiwiA8flJyM1djU2UxNkZtMUt3UlNSc1dkcXp1RTdReXJ3RV9kaDNlVzR2NEN3YzQ/banana.png\">
        </body>
        </html>
    ]]>
    </string>

</resources>
