<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_erase"
        android:title="@string/action_erase"
        android:icon="@drawable/ic_action_erase_background"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_magic_erase"
        android:title="@string/action_magic_erase"
        android:icon="@drawable/ic_action_magic_erase_background"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_cut_path"
        android:title="@string/action_cut_path"
        android:icon="@drawable/ic_action_cut"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_heal"
        android:title="@string/action_heal"
        android:icon="@drawable/ic_action_image_healing"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_flip_horz"
        android:title="@string/action_flip_horz"
        android:icon="@drawable/ic_action_image_flip_horz"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_rotate_left"
        android:title="@string/action_rotate_left"
        android:icon="@drawable/ic_action_image_rotate_left"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_rotate_right"
        android:title="@string/action_rotate_right"
        android:icon="@drawable/ic_action_image_rotate_right"
        android:showAsAction="ifRoom"/>
</menu>